Remove unsupported UseConcMarkSweepGC.